lm-sensors CHANGES file
-----------------------

SVN HEAD
  libsensors: Added support for new sysfs attributes
  sensors: Added support for new sysfs attributes
           Display both instantaneous and average power if available.
           Report thermal sensor type 1 as CPU diode
           Align power values better
  fancontrol: Support setup where one PWM output controls several fans
              Output error messages to stderr
  sensors-detect: Stop calling for PIIX5 SMBus testers
                  Improve filtering of fake DMI data
                  Print DMI system/product version if available
                  Fix loading of the cpuid module
                  Make LM73 detection less problematic
                  Add detection of National Semiconductor LM96163
                  Add detection of GMT G781
                  Properly handle Super-I/O chips without logical device

3.3.1 (2011-07-21)
  isadump: Add support for word (16-bit) and long (32-bit) reads
  isaset: Add support for word (16-bit) and long (32-bit) writes
  sensors.conf.default: Add a section for the EMC6W201
  sensors-detect: Add AMD family 15h CPU detection
                  Add detection of ADT7461A / NCT1008
                  Add detection of ITE IT8516E/F/G
                  Integrate with systemd
                  Drop unreliable smart battery detection
                  Add detection of SMSC EMC6W201
                  Drop unreliable detection of Maxim MAX6650
                  Add detection of SMSC EMC2300
                  Add detection of MAX6642
                  Add detection of ITE IT8772E
                  Don't advertise the ipmisensors driver
                  Add detection of SA56004
                  Add detection of LM95245

3.3.0 (2011-03-28)
  Makefile: Check for bison and flex
  libsensors: Add support for intrusion detection (#2370)
              Compute MAX_SUBFEATURES at run-time (#2378)
              Compute MAX_*_SENSOR_TYPES at build time (#2378)